--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ travis-ci = { repository = "takahirox/riscv-rust" }
 [dependencies]
 fnv = "1.0.7"
 sha3 = "0.9.1"
-rand = "0.8.4"
+rand = { version = "0.8.4" }
+getrandom = {version ="0.2", features = ["js"] }
